--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="about-details">
                         <h4>Zero Single-Use Plastics</h4>
                         <p>
-                            “We pledge to donate a portion of our time and profits to global plastic cleanup efforts while actively using zero single-use plastics in our daily operations.”
+                            We pledge to donate a portion of our time and profits to global plastic cleanup efforts while actively using zero single-use plastics in our daily operations.
                         </p>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 ">
                             <div class="single-service">
                                 <i class="fa fa-bolt" aria-hidden="true"></i>
-                                <h4>Fast Order Furfillment</h4>
+                                <h4>Fast Order Fulfillment</h4>
                             </div>
                         </div>
                     </div>
